--- a/style.css
+++ b/style.css
@@ -1,20 +1,32 @@
-.first_block {
-			text-align: center;
-			font-family: hack;
-			font-size: 175%;
-}
-
-.second_block {
-			font-family: hack;
-			font-size: 145%;
-}
-
 .foot_block {
-			position: fixed; /* Фиксированное положение */
-			left: 0; bottom: 0; /* Левый нижний угол */
-			padding: 10px; /* Поля вокруг текста */
-			background: #39b54a; /* Цвет фона */
-			color: #fff; /* Цвет текста */
-			width: 100%; /* Ширина слоя */
-			text-align: center;
+	position: fixed; /* Фиксированное положение */
+	left: 0; bottom: 0; /* Левый нижний угол */
+	padding: 10px; /* Поля вокруг текста */
+	background: #39b54a; /* Цвет фона */
+	color: #fff; /* Цвет текста */
+	width: 100%; /* Ширина слоя */
+	text-align: center;
+}
+
+h1 {
+	color: black;
+	font-family: ubuntu;
+	font-size: 300%;
+	text-align: center;
+}
+
+li {
+	color: black;
+	font-family: ubuntu;
+	font-size: 160%;
+	text-align: center;
+	margin: auto;
+	width: 750px;
+}
+
+p {
+	color: black;
+	font-family: ubuntu;
+	font-size: 160%;
+	text-align: center;
 }
